@@ -1,3 +1,10 @@
+2006-01-03  Jakub Jelinek  <jakub@redhat.com>
+	    Richard Henderson  <rth@redhat.com>
+
+	Merge from gomp-branch:
+        * varasm.c (assemble_variable): Handle thread-local COMMON data.
+        * defaults.h (ASM_OUTPUT_TLS_COMMON): Define.
+
 2006-01-03  Paolo Bonzini  <bonzini@gnu.org>
 
 	PR rtl-optimization/25578
